[gd_scene load_steps=9 format=3 uid="uid://cnd8w6ihmbtgs"]

[ext_resource type="Script" path="res://Scripts/Items/CoinBehaviour.gd" id="1_r87uj"]
[ext_resource type="Texture2D" uid="uid://bq647mmvylxhv" path="res://Assets/player/Coin/Coin0.png" id="2_1x6v6"]
[ext_resource type="Texture2D" uid="uid://b6u7pa0f5tlru" path="res://Assets/player/Coin/Coin1.png" id="3_r7jan"]
[ext_resource type="Texture2D" uid="uid://b57yjugskq54a" path="res://Assets/player/Coin/Coin2.png" id="4_gvejx"]
[ext_resource type="Texture2D" uid="uid://nhw7imcdyuvd" path="res://Assets/player/Coin/Coin3.png" id="5_y62gk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t4rkq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1x6v6")
}, {
"duration": 1.0,
"texture": ExtResource("3_r7jan")
}, {
"duration": 1.0,
"texture": ExtResource("4_gvejx")
}, {
"duration": 1.0,
"texture": ExtResource("5_y62gk")
}, {
"duration": 1.0,
"texture": ExtResource("4_gvejx")
}, {
"duration": 1.0,
"texture": ExtResource("3_r7jan")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j4bd1"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cx61h"]
radius = 216.148

[node name="Coin" type="RigidBody2D"]
collision_layer = 8
collision_mask = 34
continuous_cd = 1
max_contacts_reported = 1
contact_monitor = true
can_sleep = false
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_r87uj")
ROTATION_VELOCITY = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.063, 0.063)
sprite_frames = SubResource("SpriteFrames_t4rkq")
autoplay = "default"
frame_progress = 0.148791

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j4bd1")

[node name="searchArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="searchArea"]
shape = SubResource("CircleShape2D_cx61h")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="searchArea" to="." method="_on_search_area_area_entered"]
[connection signal="area_exited" from="searchArea" to="." method="_on_search_area_area_exited"]
